This file contains the logs between consecutive releases
********************************************************
# Make last version consistent with CMakeLists.txt

Release 1.8.0
=============
- Fix gstlearn_to_terra and terra_to_gstlearn (issue #566)

Release 1.7.4
=============
- Fix SEGY importation procedure for grid files

Release 1.7.3
=============
- Fix plots of model in the case of multi-direction variograms in Python

Release 1.7.2
=============
- Fix memory leak in Python Swig wrapper

Release 1.7.1
=============
- Fix HDF5 serialization missing in Python, R wrappers

Release 1.7.0
=============

Compatiblity:
-------------
- Compatibility with RHEL 8 (Old linux RedHat based like Centos8, RedHat8, Fedora etc...)
- R 4.5 support
- R 4.2 required at least

New features:
-------------
- R plotting feature refactoring: see https://github.com/gstlearn/gstlearn/pull/516 for details.
- adding the new class RankHandler which translates the samples selected in neighborhood search
into a list of variables / samples useable within a CoKriging system.
- in MeshETurbo, add a method to retreive mesh index from the coordinates of a Target Point
- Create a new method to generate a Model with random values

Refactoring:
------------
- class MatrixSquareGeneral has been merged into AMatrixSquare, which is renamed into MatrixSquare
- class MatrixSquareSymmetricSim is renamed into MatrixSymmetricSim
- class MatrixSquareSymmetric is renamed into MatrixSymmetric
- class MatrixRectangular has been merged into MatrixDense (replacing AMatrixDense)
- Essential modification: API functions such as kriging, xvalid, ... are now using KrigOpt 
  argument to carry all the options used while kriging (calcul, ndisc for block, matLC, DGM, ...)
- evalCov is now a concrete method of ACov and it calls _eval which is pure virtual and has to be implemented in new covariance classes.
- eval is renamed evalCov in ACov (the version which takes const SpacePoint& in arguments) 