@@ -403,8 +403,8 @@ MatrixDense CorAniso::simulateSpectralOmega(int nb) const
 bool CorAniso::isConsistent(const ASpace* space) const
 {
   // Check against the Space Type
-  if (space->getType() == ESpaceType::RN && !_corfunc->getCompatibleSpaceR()) return false;
-  if (space->getType() == ESpaceType::SN && !_corfunc->getCompatibleSpaceS()) return false;
+  if (getSpace()->getType() == ESpaceType::RN && !_corfunc->getCompatibleSpaceR()) return false;
+  if (getSpace()->getType() == ESpaceType::SN && !_corfunc->getCompatibleSpaceS()) return false;
 
   // Check against the space dimension
   unsigned int maxndim = _corfunc->getMaxNDim();
