@@ -5,6 +5,8 @@ This file contains the logs between consecutive releases
 Release 1.8.0
 =============
 - Fix gstlearn_to_terra and terra_to_gstlearn (issue #566)
+- ACov* is now stored as a shared_ptr in ModelGeneric, CovList (vector) and CovBase.
+- ACov does not inherit from ASpaceObject anymore (and it becomes AStringable)
 
 Release 1.7.4
 =============
